/***********************************************************************
X3 ChangeLog

2008-04-02  Alex Schumann  <rubin@afternet.org>

	* proto-p10.c: Provisional code for LOC account hostmask validation

	* nickserv.c: Provisional code for LOC account hostmask validation

2008-04-01  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* configure: Regenerated.

	* configure.in: Bumped up trunk version for X3.

2008-03-29  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/proto-p10.c: Ignore SNO messages.

2008-03-28  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* configure: Regenerated.

	* configure.in: Fixed up a typo spotted by Sakkath.

	* x3.conf.example: Fixed up a typo spotted by Sakkath.

2008-03-28  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: If Nefarious 1.2.0 is in use then use SVSQUIT to
	fake a connection reset by peer quit if spin 1 comes up.

2008-03-28  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Only allow logged in people to use spin.

2008-03-28  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Added lamepart function so that spin can be used
	on Nefarious 1.1.

2008-03-28  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Added the wheel of misfortune. This will only
	work with Nefarious 1.2.0. You can upgrade X3 now even if you are
	running 1.1. Also fixed up some roulette/shoot bugs.

	* src/hash.h: Function to change nicknames in X3 when using SVSNICK.

	* src/hash.c: Function to change nicknames in X3 when using SVSNICK.

2008-03-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Added roulette command.

	* src/chanserv.h: Added roulette command.

	* src/mod-memoserv.c: Added email sending functionality when
	new memos are sent.

2008-03-24  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: fix 1 param auth for ldap libs available but not
	enabled, case. Thanks jobe.

2008-03-11  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: Add svsnick command